# kinetic-models-pipeline

./: .gitignore  Dockerfile  README.md  download_rmg_models.py  entrypoint.sh  environment.yaml  environment.yml  generate_schemas.py  import_kinetic_models.py  main.py  models.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
